<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layoutDirection="rtl"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context=".MainActivity$PlaceholderFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reporterLabel"
            android:text="@string/label_reporter_info"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/reporterLabel"
            android:ems="10"
            android:hint="@string/label_first_name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/firstNameField"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/label_last_name"
            android:inputType="textPersonName"/>


        <EditText
            android:id="@+id/phoneField"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lastNameField"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/label_phone"
            android:inputType="phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hazardLabel"
            android:text="@string/label_hazard_info"
            android:layout_below="@+id/phoneField"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"/>

        <AutoCompleteTextView
            android:id="@+id/addressField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/hazardLabel"
            android:hint="@string/label_address"
            android:inputType="text"/>

        <EditText
            android:id="@+id/descriptionField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/addressField"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/label_description"
            android:inputType="textMultiLine"/>

        <ImageButton
            android:id="@+id/cameraIcon"
            android:layout_width="wrap_content"
            android:layout_below="@+id/descriptionField"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/camera_icon"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cameraIcon"
            android:text="@string/action_open_service_request"/>

    </RelativeLayout>
</ScrollView>
